--- a/Login-Page.css
+++ b/Login-Page.css
@@ -1,18 +1,34 @@
 .Welcome {
-    font-size: 35px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 50px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 10px;
     text-align: center;
     color: black;
 }
 .GymFit {
-    font-size: 35px;
+    font-size: 50px;
     text-align: center;
-    margin-top: -15px;
+    margin-top: -45px;
     color: rgb(231, 89, 70);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body {
-    background-size: contain;
-    background-repeat: no-repeat;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
+    background-color: #FFF6E5;
+}
+.TextAboveInputBox {
+    font-size: 15px;
+}
+.InputBox {
+    
+    border-color: #475E6B;
+    border-width: 2px;
+    border-radius: 10px;
+    padding: 20px 30px;
+    margin: 20px 0;
+    width: 75%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    background-color: #FFF6E5
 }
