--- a/Login-Page.css
+++ b/Login-Page.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapos.com/css?family=Poppins:400,700,500|Inter:400,500,600|Ubuntu:500");
+
 .Welcome {
     font-size: 50px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 10px;
     text-align: center;
     color: black;
@@ -19,6 +21,7 @@ body {
 }
 .TextAboveInputBox {
     font-size: 15px;
+    padding: 1px 1px;
 }
 .InputBox {
     
@@ -31,4 +34,22 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 15px;
     background-color: #FFF6E5
+}
+
+.ButtonStyle
+{
+    width: 75%;
+  background-color: #E75946;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+
+.ButtonStyle:hover
+{
+    box-shadow: 0 12px 10px 0 rgba(255, 0, 0, 0.432), 0 1px 15px 0 rgba(0,0,0,0.19);
 }
