--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /*
 
-# BEM (BLOCK, ELEMENT, MODIFIER) METHEDOLOGY
+# BEM (BLOCK, ELEMENT, MODIFIER) METHODOLOGY
 
 <div class="card card--show">
   <div class="card__title"></div>
