--- a/Create-Account.css
+++ b/Create-Account.css
@@ -14,5 +14,34 @@ body{
     font-family:'Verdana';
     font-size: 20px;
     background-color: #fff6e5;
+    text-align: center;
+}
+.InputBox {
     
+    border-color: #475E6B;
+    border-width: 2px;
+    border-radius: 10px;
+    padding: 20px 30px;
+    margin: 20px 0;
+    width: 75%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 15px;
+    background-color: #FFF6E5
+}
+.ButtonStyle
+{
+    width: 75%;
+  background-color: #E75946;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition-duration: 0.5s;
+}
+
+.ButtonStyle:hover
+{
+    box-shadow: 0 12px 10px 0 rgba(255, 0, 0, 0.432), 0 1px 15px 0 rgba(0,0,0,0.19);
 }
