--- a/Create-Account.css
+++ b/Create-Account.css
@@ -1,18 +1,24 @@
-h1 {
+.Welcome{
     font-weight: bold;
-    font-family:'Verdana';
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 50px;
+    margin-top: 10px;
     color:#8AEC09;
 }
-h2{
+.GymFit{
+    font-weight: bold;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 50px;
+    margin-top: -45px;
+    color: #E75946;
+}
+.CreateAccount{
     font-weight: bold;
     font-family:'Verdana';
     font-size: 25px;
-    color: #E75946;
+    color: #000000;
 }
 body{
-    font-family:'Verdana';
-    font-size: 20px;
     background-color: #fff6e5;
     text-align: center;
 }
