--- a/Login-Page.css
+++ b/Login-Page.css
@@ -5,7 +5,7 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin-top: 10px;
     text-align: center;
-    color: black;
+    color: #8AEC09;
 }
 .GymFit {
     font-size: 50px;
@@ -13,6 +13,9 @@
     margin-top: -45px;
     color: rgb(231, 89, 70);
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+::placeholder{
+    color: #E75946;
 }
 .Login{
     font-size: 25px;
