--- a/Create-Account.css
+++ b/Create-Account.css
@@ -1,20 +1,20 @@
 .Welcome{
     font-weight: bold;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 50px;
     margin-top: 10px;
     color:#8AEC09;
 }
 .GymFit{
     font-weight: bold;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 50px;
     margin-top: -45px;
     color: #E75946;
 }
 .CreateAccount{
     font-weight: bold;
-    font-family:'Verdana';
+    font-family:'Poppins', sans-serif;
     font-size: 25px;
     color: #000000;
 }
@@ -30,7 +30,7 @@ body{
     padding: 20px 30px;
     margin: 20px 0;
     width: 75%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 15px;
     background-color: #FFF6E5
 }
