--- a/Login-Page.css
+++ b/Login-Page.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapos.com/css?family=Poppins:400,700,500|Inter:400,500,600|Ubuntu:500");
+
 
 .Welcome {
     font-size: 50px;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 700;
     margin-top: 10px;
     text-align: center;
     color: black;
@@ -12,15 +13,15 @@
     text-align: center;
     margin-top: -45px;
     color: rgb(231, 89, 70);
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 .Login{
     font-size: 25px;
     color: #000000;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 body {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
     text-align: center;
     background-color: #FFF6E5;
 }
@@ -36,14 +37,16 @@ body {
     padding: 20px 30px;
     margin: 20px 0;
     width: 75%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 15px;
     background-color: #FFF6E5
 }
 
 .ButtonStyle
 {
-    width: 75%;
+  width: 75%;
+  font-size: 15px;
+  font-family: 'Poppins' , sans-serif;
   background-color: #E75946;
   color: white;
   padding: 14px 20px;
