updated text again

--- a/Login-Page.css
+++ b/Login-Page.css
@@ -6,7 +6,7 @@
     font-weight: 700;
     margin-top: 10px;
     text-align: center;
-    color: #8AEC09;
+    color: black;
 }
 .GymFit {
     font-size: 50px;
