--- a/Create-Account.css
+++ b/Create-Account.css
@@ -39,7 +39,10 @@ body{
 }
 .ButtonStyle
 {
-    width: 75%;
+  font-size: 15px;
+  font-weight: 700;
+  font-family:'Poppins', sans-serif;
+  width: 75%;
   background-color: #E75946;
   color: white;
   padding: 14px 20px;
