--- a/Create-Account.css
+++ b/Create-Account.css
@@ -3,7 +3,7 @@
     font-family: 'Poppins', sans-serif;
     font-size: 50px;
     margin-top: 10px;
-    color:#8AEC09;
+    color:#000000;
 }
 .GymFit{
     font-weight: bold;
