--- a/Create-Account.css
+++ b/Create-Account.css
@@ -22,7 +22,7 @@
     color: #E75946;
 }
 body{
-    background-color: #fff6e5;
+    background-color: #FFF6E5;
     text-align: center;
 }
 .InputBox {
@@ -44,7 +44,7 @@ body{
   font-family:'Poppins', sans-serif;
   width: 75%;
   background-color: #E75946;
-  color: white;
+  color: #FFFFFF;
   padding: 14px 20px;
   margin: 8px 0;
   border: none;
