--- a/HomePage.css
+++ b/HomePage.css
@@ -1,18 +1,19 @@
 p1 {
-    background-color: aquamarine;
-    font-family: Arial;
+    font-family: 'Poppins', sans-serif;
   }
 h1 {
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Poppins', sans-serif;
     font-size: 50px;
     color: #000000;
 
 
 
 }
+body{
+    background-color: #FFF6E5;
+}
 .SideBarButton{
-    background-color: white;
-    font-family: 'Times New Roman', Times, serif;
+    background-color: #FFF6E5;
     font-size: 50px;
     border-radius: 10px;
     padding: 1px 15px;
